[Fix: FAQ Header Shifting]

--- a/css/index.css
+++ b/css/index.css
@@ -24,11 +24,6 @@ html {
   scroll-margin-top: var(--header-height);
 }
 
-/* 화살표 버튼 텍스트 추가 */
-.activity_arrow::after {
-  content: "›";
-}
-
 .body {
   overflow-x: hidden;
 }
